--- a/FoodiePalBayar/app/src/main/res/values/strings.xml
+++ b/FoodiePalBayar/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="contact">Contact</string>
     <string name="blog">Blog</string>
     <string name="meal_planner">Meal Planner</string>
-    <string name="app_logo_description">app_logo_description</string>
-    <string name="username_hint">username_hint</string>
-    <string name="password_hint">password_hint</string>
-    <string name="login_button_label">login_button_label</string>
+    <string name="app_logo_description">App logo description</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="login_button_label">Login</string>
 
 </resources>
